fix: typesetting palette preview

--- a/src/pages/lab/typesetting.astro
+++ b/src/pages/lab/typesetting.astro
@@ -49,13 +49,13 @@ const CODE_BLOCK = `<pre class="shiki css-variables" style="background-color:var
       <h2>
         <span class="text-2xl font-bold text-one-front">Color Palette</span>
         <div class="ml-2 inline-flex text-sm gap-1">
-          <div class="text-one-front i-mdi-circle"></div>
-          <div class="text-one i-mdi-circle"></div>
-          <div class="text-one-back i-mdi-circle"></div>
+          <div class="text-one-front! i-mdi-circle"></div>
+          <div class="text-one! i-mdi-circle"></div>
+          <div class="text-one-back! i-mdi-circle"></div>
         
-          <div class="text-two-front i-mdi-circle"></div>
-          <div class="text-two i-mdi-circle"></div>
-          <div class="text-two-back i-mdi-circle"></div>
+          <div class="text-two-front! i-mdi-circle"></div>
+          <div class="text-two! i-mdi-circle"></div>
+          <div class="text-two-back! i-mdi-circle"></div>
         </div>
       </h2>
 
