--- a/src/components/BaseFriendBrief.astro
+++ b/src/components/BaseFriendBrief.astro
@@ -11,12 +11,9 @@ const {
 const outlink = { rel: "noopener", target: "_blank" };
 ---
 
-<article 
-  class="card flex flex-col gap-1 @hover:bg-one-back transition-lively"
-  role="link"
->
-  <img class="rounded-1/2 w-8 h-8 row-[1/3]" src={avatar} alt={`Avatar of ${name}`} />
-  <h2 class="font-mono transition-lively">{name}</h2>
+<article class="contents">
+  <img class="rounded-1/2 w-8 h-8" src={avatar} alt={`Avatar of ${name}`} />
+  <div class="font-mono transition-lively">{name}</div>
   <div class="friends-list flex flex-row gap-1.5 items-center">
     {
       link.github
@@ -59,12 +56,6 @@ const outlink = { rel: "noopener", target: "_blank" };
 </article>
 
 <style>
-  @media (hover: hover) and (pointer: fine) {
-    article:hover a {
-      @apply text-one;
-    }
-  }
-
   .friends-list :global(.hover-component-container) {
     @apply justify-center;
   }
@@ -74,6 +65,6 @@ const outlink = { rel: "noopener", target: "_blank" };
   }
 
   .friends-list a {
-    @apply text-one-front @hover-text-two transition-lively;
+    @apply text-one-front @hover-text-one transition-lively;
   }
 </style>
