--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -1,6 +1,6 @@
 ---
 import LayoutDefault from "src/layouts/LayoutDefault.astro";
-import FriendList from "~/components/FriendList.astro";
+import FriendList from "~/components/FriendListFull.astro";
 
 ---
 
