--- a/src/pages/academia.astro
+++ b/src/pages/academia.astro
@@ -8,7 +8,7 @@ import BaseHeadline from "src/components/BaseHeadline.astro";
 const description = `Yixuan Wang's academic writings, including posts, project intros and short thoughts.`;
 ---
 
-<LayoutEmpty>
+<LayoutEmpty noFab={true} hasScrollToTop={true}>
   <Fragment slot="head">
     <title>Academic Posts | Yixuan Wang</title>
     <meta property="og:title" content="Yixuan Wang's Academic Posts" />
