--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -19,6 +19,7 @@ timeDesc.forEach(key =>
   title="Archive"
   description="Archive of Yixuan Wang's blog posts."
   noComments={true}
+  hasScrollToTop={true}
 >
   <div class="flex flex-col gap-8">
     {
