--- a/src/pages/series/[series].astro
+++ b/src/pages/series/[series].astro
@@ -15,6 +15,7 @@ const { series } = Astro.params as {
 <LayoutDefault
   title={series}
   description={`Series ${series} on Yixuan Wang's blog.`}
+  hasScrollToTop={true}
 >
   <Fragment slot="head"></Fragment>
   <Fragment slot="headline"></Fragment>
