--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -15,6 +15,7 @@ const { tag } = Astro.params as {
 <LayoutDefault
   title={`@${tag}`}
   description={`Tag @${tag} on Yixuan Wang's blog.`}
+  hasScrollToTop={true}
 >
   <Fragment slot="head"></Fragment>
   <Fragment slot="headline"></Fragment>
