--- a/src/pages/tags.astro
+++ b/src/pages/tags.astro
@@ -11,6 +11,7 @@ import TagList from "~/components/TagList.astro";
   title="Tags"
   description="Tags on Yixuan Wang's blog."
   noComments={true}
+  hasScrollToTop={true}
 >
   <div class="flex flex-col gap-8">
     {
