--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,9 +44,10 @@ body > * {
 
 #app {
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 1fr auto;
   grid-template-rows: auto 1fr auto;
-  gap: 2rem;
+  align-items: start;
+  gap: 2rem 0;
 
   min-height: 100vh;
   min-height: -webkit-fill-available;
@@ -58,15 +59,21 @@ body.cloak {
 }
 
 #the-header {
+  grid-column: 1 / -1;
   padding-top: 1rem;
 }
 
-#the-footer {
+#the-main {
+  grid-column: 1 / -1;
+}
+
+#the-footer, #the-fab {
   padding-bottom: 1rem;
 }
 
 #the-header,
-#the-footer {
+#the-footer,
+#the-fab {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -74,7 +81,8 @@ body.cloak {
 }
 
 #the-header>*,
-#the-footer>* {
+#the-footer>*,
+#the-fab>* {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -84,6 +92,7 @@ body.cloak {
   position: absolute;
   bottom: 0;
   width: 100%;
+  z-index: 10;
 }
 
 :root {
